--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,12 +96,33 @@ a:hover {
   margin-left: 70px;
   border-right: 3px solid black;
 }
+.my-work-title{
+  width: 11%;
+  margin-top: 100px;
+  height: 150px;
+  padding: 20px;
+
+}
+.my-works{
+  margin-top: 50px;
+}
 .about-me h2{
   font-size: 30px;
 }
+
 .about-me-content{
   padding:20px;
   height: 150px;
+}
+.tip-cal img{
+
+  opacity: 1;
+  width: 100%;
+  height: 80%;
+}
+
+.tip-cal img:hover{
+  opacity: 0.5;
 }
 
 
