--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,13 +81,27 @@ a:hover {
   display: flex;
   position: absolute;
   padding: 10px;
-  right: 100px;
+  right: 110px;
   bottom: 30px;
   background-color: rgb(59 58 58);
 }
-
+.hero .puspi {
+  display: flex;
+  position: absolute;
+  padding: 10px;
+  right: 135px;
+  bottom: 40px;
+  /* background-color: rgb(59 58 58); */
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
 .page-section {
   display: flex;
+}
+
+.contact {
+  margin-top: 750px;
 }
 
 .about-me {
@@ -108,7 +122,6 @@ a:hover {
   margin-top: 50px;
 }
 
-
 .about-me h2 {
   font-size: 30px;
 }
@@ -118,21 +131,20 @@ a:hover {
   height: 150px;
   text-align: justify;
 }
-.projects-2{
+.projects-2 {
   display: flex;
   justify-content: space-around;
 }
-.js-project{
+.js-project {
   position: relative;
   width: 400px;
 }
-.js-project img{
+.js-project img {
   opacity: 1;
   width: 100%;
   display: flex;
   justify-content: center;
   height: 100%;
-
 }
 .tip-cal {
   position: relative;
@@ -147,15 +159,15 @@ a:hover {
 }
 
 .image-title {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
-    width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  width: 100%;
 }
 
 .tip-cal img:hover {
@@ -175,4 +187,30 @@ h6 {
 
 p {
   margin: 0;
+}
+
+.contact-wrap {
+  width: 100%;
+}
+.contact {
+}
+.contact h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+}
+.contact-info {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+}
+.info {
+  height: 50px;
+  padding: 5px;
+}
+.info img {
+  height: 100%;
 }
