--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,37 @@ a:hover {
   bottom: 30px;
   background-color: rgb(59 58 58);
 }
+@media only screen and (max-width: 768px) {
+  header h1 {
+    display: inline-block;
+    font-size: 25px;
+  }
+  a{
+    font-size: 20px;
+  }
+  header-nav{
+    padding-top: 0;
+  }
+  .page-section{
+    height: 300px;
+  }
+ 
+.my-work-title {
+  width: 15% !important;
+  margin-top: 100px;
+  height: 150px;
+  padding: 20px;
+}
+.js-project {
+  position: relative;
+  width: 240px !important;
+}
+
+.contact {
+    margin-top: 350px !important;
+}
+
+}
 .hero .puspi {
   display: flex;
   position: absolute;
@@ -133,7 +164,7 @@ a:hover {
 }
 .projects-2 {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .js-project {
   position: relative;
