--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ a:hover {
   bottom: 30px;
   background-color: rgb(59 58 58);
 }
-/* @media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   header h1 {
     display: inline-block;
     font-size: 25px;
@@ -115,7 +115,7 @@ a:hover {
     margin-top: 350px !important;
 }
 
-} */
+}
 .hero .puspi {
   display: flex;
   position: absolute;
